@@ -38,6 +38,8 @@ extern void pascal_type_print_method_args (char *, char *,
 
 /* These are in p-lang.c: */
 
+extern int is_pascal_string_type (struct type *, int *, int *, int *, int*);
+
 extern void pascal_printchar (int, struct ui_file *);
 
 extern void pascal_printstr (struct ui_file *, char *, unsigned int, int, int);
